# software-patterns

./: .gitignore  README.md
Src_master/src/: README.txt
assignment_10/src/: CMakeLists.txt  Test.C  XMLApplication.H  XMLDisplay.C  XMLLoader.C  XMLLoader.H  XMLValidator.C
assignment_10/uml/: architecture.puml  architecture_simple.puml  sequence.puml  sequence_simple.puml
assignment_11/src/: AppContext.H  Attr.C  Attr.H  CMakeLists.txt  Command.H  CommandInterpreter.C  CommandInterpreter.H  Document.C  Document.H  Element.C  Element.H  ICommand.H  Invoker.C  Invoker.H  Node.H  Test.C  Text.C  Text.H  XMLApplication.C  XMLApplication.H  XMLCommands.C  XMLCommands.H  XMLDisplay.H  XMLEditor.C  XMLEditor.H  XMLLoader.C  XMLLoader.H  XMLSerializer.H  XMLValidator.C  XMLValidator.H
assignment_11/uml/: CommandPattern.puml  PrototypePattern.puml
assignment_12/src/: Attr.C  Attr.H  BetweenTagsState.C  BetweenTagsState.H  CMakeLists.txt  DOMIterator.H  DepthFirstDOMIterator.H  Document.H  Element.H  InsideAttributeState.H  InsideClosingTagState.C  InsideClosingTagState.H  InsideElementTagState.C  InsideElementTagState.H  InsidePrologState.H  MinimalNodeProcessor.C  MinimalNodeProcessor.H  MinimalNodeVisitor.H  Node.H  NodeProcessor.H  NodeVisitor.H  ParserState.H  PrettyNodeProcessor.C  PrettyNodeProcessor.H  PrettyNodeVisitor.H  StandardDOMNodeFactory.H  Test.C  Text.C  Text.H  XMLParser.C  XMLParser.H  XMLSerializer.C  XMLSerializer.H
assignment_12/uml/: StatePattern.puml  VisitorPattern.puml
assignment_13/src/: Attr.C  Attr.H  AttrFlyweight.H  BetweenTagsState.H  CMakeLists.txt  DOMBuilder.H  DOMFlyweightFactory.C  DOMFlyweightFactory.H  DepthFirstDOMIterator.C  Document.C  Document.H  Element.C  Element.H  ElementFlyweight.H  Expression.C  Expression.H  InsideAttributeState.C  InsideAttributeState.H  InsideClosingTagState.H  InsideElementTagState.H  InsidePrologState.C  InsidePrologState.H  MinimalNodeProcessor.C  MinimalNodeProcessor.H  MinimalNodeVisitor.C  MinimalNodeVisitor.H  MinimalXMLSerializer.H  Node.C  Node.H  NodeFlyweight.H  NodeProcessor.H  NodeVisitor.H  ParserState.H  PrettyNodeProcessor.H  PrettyNodeVisitor.C  PrettyNodeVisitor.H  PrettyXMLSerializer.H  Test.C  Text.C  Text.H  (+7 more)
assignment_13/tests/: Interpreter.xml
assignment_13/uml/: FacadePattern.puml  FlyweightPattern.puml  InterpreterPattern.puml
assignment_1to3/src/: Attr.H  CompositeNode.C  DOMIterator.H  DepthFirstDOMIterator.H  Document.C  Document.H  Element.H  MinimalNodeProcessor.H  Node.C  Test.C  Text.H  ValidatingNode.H
assignment_1to3/uml/: DecoratorPattern.puml  IteratorPattern.puml  StrategyPattern2.puml
assignment_4/src/: CMakeLists.txt  MinimalXMLSerializer.C  PrettyXMLSerializer.H  Test.C  (+4 more)
assignment_7/: ExperiencesPatternPath.puml  ObjectAdapter.puml  Readme.txt  VirtualProxy.puml
assignment_7/src/: Attr.H  CMakeLists.txt  DOMAttrAdapter.C  DOMAttrAdapter.H  DOMDocumentAdapter.C  DOMDocumentAdapter.H  DOMElementAdapter.C  DOMElementAdapter.H  DOMNamedNodeMapAdapter.C  DOMNamedNodeMapAdapter.H  DOMNodeAdapter.C  DOMNodeAdapter.H  DOMNodeListAdapter.C  DOMNodeListAdapter.H  DOMTextAdapter.C  DOMTextAdapter.H  Document.H  Element.H  NamedNodeMap.H  Node.H  NodeList.H  Test.C  Text.H
assignment_8/src/: CMakeLists.txt  DOMBuilder.C  DOMBuilder.H  DOMParseMediator.C  DOMParseMediator.H  Mediator.H  Observer.H  ParseStatusObserver.C  ParseStatusObserver.H  Test.C
src/: Attr.H  CMakeLists.txt  CompositeNode.H  DepthFirstDOMIterator.C  Document.C  Document.H  Element.C  Element.H  MinimalNodeProcessor.C  MinimalNodeProcessor.H  Node.C  Node.H  NodeProcessor.H  PrettyNodeProcessor.C  PrettyNodeProcessor.H  Test.C  Text.C  Text.H  ValidatingCompositeNode.H  ValidatingDocument.C  ValidatingDocument.H  ValidatingElement.C  ValidatingElement.H  ValidatingNode.H  XMLSerializer.C  XMLSerializer.H
tests/: ExpectedResults.txt
uml/: FactoryMethod.puml  LeadershipDiscussion.puml  StrategyPattern.puml
(+59 files in other folders)
